	PR target/36332 	* real.c (real_maxval): Clear a lower bit to make real_maxval 	match get_max_float for IBM long double format.

* gcc.c-torture/execute/ieee/pr36332.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@139906 138bc75d-0d04-0410-961f-82ee72b054a4